--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,12 @@
 ---
 import HeroSection from '../components/HeroSection.astro';
 import MeetOurTeachers from '../components/MeetOurTeachers.astro';
+import DailyMail from '../components/DailyMail.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
   <HeroSection />
   <MeetOurTeachers />
+  <DailyMail />
 </Layout>
